# dragonfish

./: .env  .eslintrc.json  .gitignore  .gitmodules  .prettierignore  .prettierrc  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  angular.json  build-dev.sh  build-prod.sh  build.sh  build_dev.sh  build_prod.sh  docker-compose.yml  jest.config.js  licenses.txt  migrations.json  nx.json  old.workspace.json  package-lock.json  package.json  pm2.config.js  production.Dockerfile  sample.env  tailwind.config.js  testing.Dockerfile  tsconfig.base.json  tsconfig.build.json  tsconfig.json  tslint.json  turbo.json  workspace.json
.azure-pipelines/: azure-pipelines-backend.yml  azure-pipelines-frontend.yml
.github/: FUNDING.yml  default.yml  pull_request_template.md
.github/workflows/: build-and-test-api.yml  build-and-test-client.yml  build-and-test-server.yml  build-api.yml  build-client.yml  build-dashboard.yml  build-image.yml  build-server.yml  deploy-prod.yml  deploy-test.yml  (+7 more)
.render/: production.Dockerfile  testing-deployment.Dockerfile  testing.Dockerfile
deploy/: Caddyfile  README.md  pm2.config.js  provision.sh
docs/: deployment-notes.md
frontend/: README.md  angular.json  package.json  proxy.config.json  shared-imports.ts  shared-models.ts
native/: README.md  copyNativeLibs.ts
native/html_sanitizer/: Cargo.toml
native/html_sanitizer/src/: lib.rs
native/word_counter/: Cargo.toml  build.rs  word-counter.ts  wordCounter.ts
native/word_counter/src/: lib.rs
scripts/: copyNativeLibs.ts
src/: app-routing.module.ts  app.module.ts  main.ts
(+2833 files in other folders)
