[package]
name = "html_sanitizer"
version = "0.1.0"
authors = ["Offprint Development Team"]
license = "MIT"
edition = "2018"

[lib]
name = "html_sanitizer"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ammonia = "3.1.0"
maplit = "1.0.2"
wasm-bindgen = "0.2.67"

[package.metadata.wasm-pack.profile.release]
# Manually enable mutable globals, otherwise wasm-opt fails
# See https://github.com/rustwasm/wasm-pack/issues/886 for more details.
wasm-opt = ["-O", "--enable-mutable-globals"]

