[package]
name = "word_counter"
version = "0.1.0"
authors = ["Alyx Mote <figments@outlook.com>"]
license = "MIT"
edition = "2018"

[lib]
name = "word_counter"
crate-type = ["cdylib"]

[dependencies]
# Library specific crates
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
voca_rs = "1.10.1"
wasm-bindgen = "0.2.67"
js-sys = "0.3.44"
